# Procedural-Animation-In-Raylib

./: .gitignore  CMakeLists.txt  README.md
cmake/: imgui.cmake  json.cmake  raylib-cpp.cmake  rlimgui.cmake
src/: Follow_Circle.hpp  LeaderCircle.cpp  LeaderCircle.hpp  Test_Circle.cpp  Test_Circle.hpp  main.cpp
